--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .App-header {
   background-color: #282c34; 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(0.5rem + 1.5vmin);
