--- a/src/counter-list/counter-list.component.css
+++ b/src/counter-list/counter-list.component.css
@@ -1,3 +1,13 @@
 .counter-list-container{
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.counter-form-container{
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  margin-bottom: 2rem;
 }
