added login page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
+html, body { height: 100%; }
+
+#root{
+  height: 100%;
+}
+
+.background{
+  background-image: url('./img/img\(11\).jpg'); 
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
+
 .App {
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  height: 100%;
+  overflow: auto;
 }
 
 .App-header {
@@ -12,6 +29,10 @@
   color: white;
 }
 
+.content{
+  height: 100%;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -19,3 +40,36 @@
 .counter-content{
   margin: 3rem;
 }
+
+.button-med{
+  padding: 1rem 2rem;
+}
+
+button{
+  border: none;
+  background: #404040;
+  color: #ffffff !important;
+  font-weight: 100; 
+  text-transform: uppercase;
+  /* border-radius: 6px; */
+  display: inline-block;
+}
+
+button:hover { 
+  color: #404040 !important;
+  font-weight: 700 !important;
+  letter-spacing: 3px;
+  background: none;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  transition: all 0.3s ease 0s;
+  }
+
+  .button-Link{  
+    text-decoration: none;
+    color: white;
+  }
+
+  .button-Link:hover{
+    color: black;
+  }
