--- a/src/counter-list/counter/counter.component.css
+++ b/src/counter-list/counter/counter.component.css
@@ -1,8 +1,9 @@
 .container-counter{
   display: flex;
   flex-direction: column;
-  max-width: 18rem;
-  border: 2px solid black;
+  max-width: 15rem;
+  border: 2px solid black; 
+  margin: 1rem;
 }
 
 .blocked-button{
