--- a/src/counter-list/counter/counter.component.css
+++ b/src/counter-list/counter/counter.component.css
@@ -1,7 +1,8 @@
 .container-counter{
   display: flex;
   flex-direction: column;
-  max-width: 15rem;
+  max-width: 13rem;
+  min-width: 13rem;
   border: 2px solid black; 
   margin: 1rem;
 }
