--- a/src/counter-list/counter-list.component.css
+++ b/src/counter-list/counter-list.component.css
@@ -8,6 +8,6 @@
 .counter-form-container{
   display: flex;
   justify-content: center;
-  flex-direction: row;
-  margin-bottom: 2rem;
+  flex-direction: column;
+  margin-bottom: 2rem; 
 }
